--- a/src/index.css
+++ b/src/index.css
@@ -52,3 +52,16 @@ body {
 .cursor{
   color: white;
 }
+
+.texture-select {
+  transform: scale(5);
+}
+
+.texture-select img.active{
+  border: 2px solid red;
+}
+
+.menu {
+  top: 10px;
+  left: 10px;
+}
